# Innards-Engine

./: API.hpp  CMakeLists.txt  LICENSE  README.md
Innards_Engine/assets/: Asset.cpp  Asset.hpp
